--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -24,6 +24,7 @@
             <mat-card-content>
                 <ppw-table
                     [data]="players.entity.items"
+                    [footerData]="footerData"
                     [enableRowSelection]="true"
                     [enableRowDrag]="enableRowDrag"
                     [options]="tableOptions"
