Add loader component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,6 +90,8 @@ body {
     --ppw-expandable-card-header-background-color: #6eb343;
     --ppw-expandable-card-header-indicator-color: white;
 
+    --ppw-loader-content-padding: 16px;
+
     --ppw-message-bar-warning-text-color: black;
 
     --ppw-sidenav-background-color: #18428c;
