Replace MtxLoader with PpwLoader in the async-result module

--- a/projects/ppwcode/ng-async/src/lib/async-result/async-result.component.html
+++ b/projects/ppwcode/ng-async/src/lib/async-result/async-result.component.html
@@ -1,4 +1,4 @@
-<mtx-loader [loading]="pending()" type="progressbar">
+<ppw-loader [loading]="pending()">
     @if (asyncResult(); as result) {
         @switch (result.status) {
             @case ('failed') {
@@ -27,7 +27,7 @@
             }
         }
     }
-</mtx-loader>
+</ppw-loader>
 
 <ng-template #failed>
     <ppw-message-bar
