Add link to PeopleWare website in example app to showcase external navigation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,6 +95,7 @@ body {
     --ppw-sidenav-background-color: #18428c;
     --ppw-sidenav-navigation-item-icon-color: #6eb343;
     --ppw-sidenav-close-button-color: white;
+    --ppw-sidenav-navigation-item-external-icon-color: rgba(255, 255, 255, 0.15);
 
     --ppw-table-row-highlight-background-color: rgba(0, 0, 255, 0.03);
 
