Rename 'reset' to 'clear' since there are warnings explaining that the word 'reset' is a reserved word.

--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -1,5 +1,5 @@
 @if (searchForm) {
-    <ppw-search-filter (search)="performSearch()" (reset)="performReset()" [submitDisabled]="searchForm.invalid">
+    <ppw-search-filter (search)="performSearch()" (clear)="performReset()" [submitDisabled]="searchForm.invalid">
         <form [formGroup]="searchForm" class="flex-row gap-8">
             <mat-form-field>
                 <mat-label>firstName</mat-label>
