Move the opinionated definition of the margins on the expandable-card and the search-filter to the example app.
It's not our components that should decide what the margin should be, nor to have to override it when using it with the Material defaults.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -254,3 +254,20 @@ div.page-toggles {
         }
     }
 }
+
+ppw-search-filter {
+    mat-card {
+        margin: 8px;
+    }
+}
+
+mat-expansion-panel.ppw-expandable-panel {
+    margin: 8px;
+
+    &.mat-expansion-panel-spacing:first-child {
+        margin-top: 8px !important;
+    }
+    &.mat-expansion-panel-spacing:last-child {
+        margin-bottom: 8px !important;
+    }
+}
