Enure that the page contents are shown correctly after page reload

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -28,7 +28,7 @@
             </ppw-left-sidenav>
         </mat-drawer>
     }
-    <mat-drawer-content>
+    <mat-drawer-content class="ppw-app-drawer-content">
         <div class="ppw-page-container">
             @if (showWireframe()) {
                 <ppw-toolbar
