Fix linting issues

--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -149,12 +149,7 @@
                                 (orderChanged)="orderChanged(players.entity, $event)"
                                 (selectionChanged)="updateSelected($event)"
                             >
-                                <ppw-column
-                                    name="firstName"
-                                    type="text"
-                                    label="First name"
-                                    sticky
-                                ></ppw-column>
+                                <ppw-column name="firstName" type="text" label="First name" sticky></ppw-column>
                                 <ppw-column name="lastName" type="text" label="Last name"></ppw-column>
                                 <ppw-column name="birthDate" type="date" label="Birth date"></ppw-column>
                                 <ppw-column name="age" type="number" label="Age"></ppw-column>
@@ -225,11 +220,7 @@
                                 (orderChanged)="orderChanged(players.entity, $event)"
                                 (selectionChanged)="updateSelected($event)"
                             >
-                                <ppw-column
-                                    name="firstName"
-                                    type="text"
-                                    label="First name"
-                                ></ppw-column>
+                                <ppw-column name="firstName" type="text" label="First name"></ppw-column>
                                 <ppw-column name="lastName" type="text" label="Last name"></ppw-column>
                                 <ppw-column name="birthDate" type="date" label="Birth date"></ppw-column>
                                 <ppw-column name="age" type="number" label="Age"></ppw-column>
