--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -11,6 +11,7 @@
         cdkDropList
         [cdkDropListData]="dataSource()"
         (cdkDropListDropped)="dropTable($event)"
+        [multiTemplateDataRows]="expandable()"
     >
         <!-- Draghandle column -->
         @if (enableRowDrag()) {
@@ -116,6 +117,40 @@
                 }
             </ng-container>
         }
+        @if (expandable()) {
+            <ng-container matColumnDef="expand">
+                <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+                <td mat-cell *matCellDef="let record" [style.width]="'48px'">
+                    <button
+                        mat-icon-button
+                        (click)="toggleExpand(record.initialRecord); $event.stopPropagation()"
+                        class="ppw-table-expand-toggle-button"
+                        [class.ppw-table-expand-toggle-button--expanded]="isExpanded(record.initialRecord)"
+                    >
+                        <mat-icon>keyboard_arrow_down</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="expandedDetail">
+                <td mat-cell *matCellDef="let record" [attr.colspan]="columnNames().length">
+                    <div
+                        class="ppw-table-expanded-row-container"
+                        [class.ppw-table-expanded-row-container--expanded]="isExpanded(record.initialRecord)"
+                    >
+                        <div class="ppw-table-expanded-row-content">
+                            @if (expandableTemplate()) {
+                                <ng-container
+                                    *ngTemplateOutlet="
+                                        expandableTemplate()!;
+                                        context: { $implicit: record.initialRecord }
+                                    "
+                                ></ng-container>
+                            }
+                        </div>
+                    </div>
+                </td>
+            </ng-container>
+        }
 
         <tr mat-header-row *matHeaderRowDef="columnNames(); sticky: !!options()?.header?.sticky"></tr>
         <tr
@@ -126,8 +161,11 @@
             [cdkDragDisabled]="dragDisabled"
             (cdkDragReleased)="dragDisabled = true"
             [class.highlight]="options()?.rows?.highlightOnHover"
-            [class.clickable]="options()?.rows?.onClick"
+            [class.clickable]="options()?.rows?.onClick || expandable()"
         ></tr>
+        @if (expandable()) {
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="ppw-table-expanded-row"></tr>
+        }
         @if (footerData() !== undefined) {
             <tr mat-footer-row *matFooterRowDef="columnNames(); sticky: !!options()?.header?.sticky"></tr>
         }
