--- a/src/app/table/table-demo.component.html
+++ b/src/app/table/table-demo.component.html
@@ -274,5 +274,5 @@
             </mat-card>
         </div>
     </div>
-    <ppw-expandable-table></ppw-expandable-table>
+    <ppw-expandable-table-demo></ppw-expandable-table-demo>
 </div>
