--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.scss
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.scss
@@ -24,7 +24,9 @@
         }
     }
 
-    mat-drawer-content.ppw-app-drawer-content {
-        margin-left: var(--ppw-app-wireframe-drawer-width, 300px) !important;
+    @media only screen and (min-width: 960px) {
+        mat-drawer-content.ppw-app-drawer-content {
+            margin-left: var(--ppw-app-wireframe-drawer-width, 300px) !important;
+        }
     }
 }
