Add a demo page that showcases the dashboard items table component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,6 +104,9 @@ body {
 
     --ppw-toolbar-page-title-font-size: 20px;
     --ppw-toolbar-page-title-text-color: #18428c;
+
+    --ppw-dashboard-items-table-primary-color: #18428c;
+    --ppw-dashboard-items-table-background-color: #6eb343;
 }
 
 ppw-wireframe.flat {
