--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ppw-wireframe
     [style.--ppw-toolbar-background]="showToolbarBackground ? 'orange' : 'unset'"
     [navigationItems]="getNavigationItems()"
-    [sidebarOptions]="sidebarOptions"
+    [sidebarOptions]="getSidebarOptions()"
     [toolbarHeightPx]="toolbarHeightPx"
     [hideSidenavWhenNoNavigationItems]="true"
     [class.flat]="flatWireframeStyle"
@@ -42,6 +42,7 @@
                 <mat-slide-toggle [(ngModel)]="sidebarOptions.showPageTitle">Show title</mat-slide-toggle>
                 <mat-slide-toggle [(ngModel)]="showToolbarBackground">Show toolbar background</mat-slide-toggle>
                 <mat-slide-toggle [(ngModel)]="flatWireframeStyle">Flat wireframe style</mat-slide-toggle>
+                <mat-slide-toggle [(ngModel)]="closedByDefaultOnLargerDevice">Menu closed by default</mat-slide-toggle>
             </div>
             <div class="version-info">
                 <div>v19.3.1</div>
