Fix drawer behavior for apps with closedByDefaultOnLargerDevice set to true

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -28,7 +28,10 @@
             </ppw-left-sidenav>
         </mat-drawer>
     }
-    <mat-drawer-content class="ppw-app-drawer-content">
+    <mat-drawer-content
+        class="ppw-app-drawer-content"
+        [class.drawer-content-no-margin]="!!sidebarOptions()?.closedByDefaultOnLargerDevice"
+    >
         <div class="ppw-page-container">
             @if (showWireframe()) {
                 <ppw-toolbar
