--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,8 @@ body {
     --ppw-dashboard-items-table-width: 750px;
     --ppw-dashboard-items-table-primary-color: #18428c;
     --ppw-dashboard-items-table-background-color: #6eb343;
+    --ppw-dashboard-wrapper-container-vertical-margin: 32px;
+    --ppw-dashboard-items-card-margin: 8px;
 }
 
 ppw-wireframe.flat {
