--- a/projects/ppwcode/ng-common-components/src/lib/dashboard-items/dashboard-items-table/dashboard-items-table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/dashboard-items/dashboard-items-table/dashboard-items-table.component.scss
@@ -1,7 +1,7 @@
 .ppw-dashboard-wrapper-container {
     margin: 32px auto;
     text-align: center;
-    max-width: 800px;
+    max-width: var(--ppw-dashboard-items-table-width, 800px);
 
     .ppw-dashboard-wrapper {
         display: grid;
@@ -10,6 +10,7 @@
         align-items: stretch;
 
         mat-card.dashboard-item {
+            width: calc(var(--ppw-dashboard-items-table-width, 800px) / 2);
             margin: 8px;
 
             mat-card-header {
@@ -18,6 +19,13 @@
                 mat-card-title {
                     color: var(--ppw-dashboard-items-table-primary-color);
                     --mat-card-title-text-size: 20px;
+                    max-width: max(
+                        calc((var(--ppw-dashboard-items-table-width, 800px) / 2) - 32px),
+                        calc(300px - 32px)
+                    );
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
 
@@ -62,24 +70,33 @@
     .ppw-dashboard-wrapper-container {
         .ppw-dashboard-wrapper {
             grid-template-columns: 1fr;
+
+            mat-card.dashboard-item {
+                margin: auto;
+            }
         }
     }
 }
 
 @media only screen and (max-width: 840px) {
     .ppw-dashboard-wrapper-container {
-        max-width: 382px;
-
         .ppw-dashboard-wrapper {
             grid-template-columns: 1fr;
 
             mat-card.dashboard-item {
-                width: 90%;
+                width: 90vw;
                 margin: auto;
-            }
 
-            .ppw-dashboard-card-image {
-                padding: 32px 0 32px 0;
+                mat-card-header {
+                    text-align: left;
+                    mat-card-title {
+                        max-width: calc(90vw - 32px);
+                    }
+                }
+
+                .ppw-dashboard-card-image {
+                    padding: 32px 0 32px 0;
+                }
             }
         }
     }
@@ -88,9 +105,22 @@
 @media only screen and (max-width: 425px) {
     .ppw-dashboard-wrapper-container {
         .ppw-dashboard-wrapper {
-            .ppw-dashboard-card-image {
-                padding: 32px 0 32px 0;
-                font-size: 80px;
+            grid-template-columns: 1fr;
+            mat-card.dashboard-item {
+                width: 90vw;
+                margin: auto;
+
+                mat-card-header {
+                    text-align: left;
+                    mat-card-title {
+                        max-width: calc(90vw - 32px);
+                    }
+                }
+
+                .ppw-dashboard-card-image {
+                    padding: 32px 0 32px 0;
+                    font-size: 80px;
+                }
             }
         }
     }
@@ -99,16 +129,20 @@
 @media only screen and (max-width: 375px) {
     .ppw-dashboard-wrapper-container {
         .ppw-dashboard-wrapper {
-            mat-card-header {
-                display: block;
-                text-align: center;
-            }
             mat-card.dashboard-item {
-                width: 90vw;
-            }
-            .ppw-dashboard-card-image {
-                padding: 16px 0 16px 0;
-                font-size: 60px;
+                max-width: 90vw;
+                mat-card-header {
+                    display: block;
+                    text-align: center;
+                    mat-card-title {
+                        max-width: calc(90vw - 32px);
+                    }
+                }
+
+                .ppw-dashboard-card-image {
+                    padding: 16px 0 16px 0;
+                    font-size: 60px;
+                }
             }
         }
     }
