Override the dashboard items table width variable in the demo app

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,7 @@ body {
     --ppw-toolbar-page-title-font-size: 20px;
     --ppw-toolbar-page-title-text-color: #18428c;
 
+    --ppw-dashboard-items-table-width: 750px;
     --ppw-dashboard-items-table-primary-color: #18428c;
     --ppw-dashboard-items-table-background-color: #6eb343;
 }
