Add a way to pass options to the dashboard-items-table and allow choosing between left and center alignment

--- a/projects/ppwcode/ng-common-components/src/lib/dashboard-items/dashboard-items-table/dashboard-items-table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/dashboard-items/dashboard-items-table/dashboard-items-table.component.html
@@ -1,4 +1,7 @@
-<div class="ppw-dashboard-wrapper-container">
+<div
+    class="ppw-dashboard-wrapper-container"
+    [class.ppw-dashboard-items-left]="dashboardOptions()?.cardsAlignment === 'left'"
+>
     <div class="ppw-dashboard-wrapper">
         @for (item of dashboardItems(); track item) {
             <mat-card class="dashboard-item">
