Update the demo page to align the dashboard items to the left

--- a/src/app/dashboard-item-demo/dashboard-item-demo.component.html
+++ b/src/app/dashboard-item-demo/dashboard-item-demo.component.html
@@ -1,5 +1,6 @@
 <ppw-dashboard-items-table
     [dashboardItems]="dashboardItems"
+    [dashboardOptions]="{ cardsAlignment: 'left' }"
     (executeAction)="$event ? $event.clickFn() : undefined"
 ></ppw-dashboard-items-table>
 
