--- a/projects/ppwcode/ng-common-components/src/lib/dashboard-items/dashboard-items-table/dashboard-items-table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/dashboard-items/dashboard-items-table/dashboard-items-table.component.scss
@@ -76,6 +76,17 @@
                     flex-direction: column;
                     gap: 0;
                 }
+                &.ppw-dashboard-item-actions-alignment--start {
+                    justify-content: flex-start;
+                    align-items: start;
+                }
+                &.ppw-dashboard-item-actions-alignment--center {
+                    justify-content: center;
+                }
+                &.ppw-dashboard-item-actions-alignment--end {
+                    justify-content: flex-end;
+                    align-items: end;
+                }
             }
         }
     }
