Remove wireframe drawer content margin when the sidenav is forcibly closed because of no navigation items

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -30,7 +30,7 @@
     }
     <mat-drawer-content
         class="ppw-app-drawer-content"
-        [class.drawer-content-no-margin]="!!sidebarOptions()?.closedByDefaultOnLargerDevice"
+        [class.drawer-content-no-margin]="!!sidebarOptions()?.closedByDefaultOnLargerDevice || forceHiddenSidenav()"
     >
         <div class="ppw-page-container">
             @if (showWireframe()) {
