Refactor example app component to reflect a reactive setup to get the navigation items without triggering a rerendering of the sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ppw-wireframe
     [style.--ppw-toolbar-background]="showToolbarBackground ? 'orange' : 'unset'"
-    [navigationItems]="getNavigationItems()"
+    [navigationItems]="navigationItems()"
     [sidebarOptions]="getSidebarOptions()"
     [toolbarHeightPx]="toolbarHeightPx"
     [hideSidenavWhenNoNavigationItems]="true"
