--- a/src/app/dashboard-item-demo/dashboard-item-demo.component.html
+++ b/src/app/dashboard-item-demo/dashboard-item-demo.component.html
@@ -1,5 +1,5 @@
 <ppw-dashboard-items-table
-    [dashboardItems]="dashboardItems"
+    [dashboardItems]="dashboardItems()"
     [dashboardOptions]="{ cardsAlignment: 'left' }"
     (executeAction)="$event ? $event.clickFn() : undefined"
 ></ppw-dashboard-items-table>
