Add NL as an extra language to the application to allow a user to change the language.
This is needed to reproduce the table headers not translating on language change.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,7 @@
         @if ((isSmallScreen$ | async) === false) {
             <span>Username</span>
         }
+        <ppw-language-select></ppw-language-select>
     </ng-container>
     <ng-container ppw-sidebar-top-content></ng-container>
     <ng-container ppw-page-content>
