--- a/src/app/table/table-demo.component.html
+++ b/src/app/table/table-demo.component.html
@@ -4,11 +4,11 @@
         <ppw-search-filter (search)="performSearch()" (clear)="performReset()" [submitDisabled]="searchForm.invalid">
             <form [formGroup]="searchForm" class="flex-row gap-8">
                 <mat-form-field>
-                    <mat-label>firstName</mat-label>
+                    <mat-label>{{ 'table.firstname' | translate }}</mat-label>
                     <input matInput formControlName="firstName" />
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label>lastName</mat-label>
+                    <mat-label>{{ 'table.lastname' | translate }}</mat-label>
                     <input matInput formControlName="lastName" />
                 </mat-form-field>
             </form>
@@ -34,23 +34,23 @@
                         (orderChanged)="orderChanged(players.entity, $event)"
                         (selectionChanged)="updateSelected($event)"
                     >
-                        <ppw-column name="firstName" type="text" label="First name"></ppw-column>
-                        <ppw-column name="lastName" type="text" label="Last name"></ppw-column>
-                        <ppw-column name="birthDate" type="date" label="Birth date"></ppw-column>
-                        <ppw-column name="age" type="number" label="Age"></ppw-column>
+                        <ppw-column name="firstName" type="text" [label]="'table.firstname' | translate"></ppw-column>
+                        <ppw-column name="lastName" type="text" [label]="'table.lastname' | translate"></ppw-column>
+                        <ppw-column name="birthDate" type="date" [label]="'table.birthdate' | translate"></ppw-column>
+                        <ppw-column name="age" type="number" [label]="'table.age' | translate"></ppw-column>
                         <ppw-column
                             name="income"
                             type="number"
-                            label="Income"
+                            [label]="'table.income' | translate"
                             [numberFormatFn]="formatIncome.bind(this)"
                         ></ppw-column>
                         <ppw-column
                             name="bonus"
                             type="number"
-                            label="Bonus"
+                            [label]="'table.bonus' | translate"
                             [numberFormatFn]="formatBonus.bind(this)"
                         ></ppw-column>
-                        <ppw-column name="rowIndex" type="template" label="Row index">
+                        <ppw-column name="rowIndex" type="template" [label]="'table.row-index' | translate">
                             <ng-template ppw-column-cell let-rowIndex="rowIndex">
                                 <span>{{ rowIndex }}</span>
                             </ng-template>
@@ -149,23 +149,36 @@
                                 (orderChanged)="orderChanged(players.entity, $event)"
                                 (selectionChanged)="updateSelected($event)"
                             >
-                                <ppw-column name="firstName" type="text" label="First name" sticky></ppw-column>
-                                <ppw-column name="lastName" type="text" label="Last name"></ppw-column>
-                                <ppw-column name="birthDate" type="date" label="Birth date"></ppw-column>
-                                <ppw-column name="age" type="number" label="Age"></ppw-column>
+                                <ppw-column
+                                    name="firstName"
+                                    type="text"
+                                    [label]="'table.firstname' | translate"
+                                    sticky
+                                ></ppw-column>
+                                <ppw-column
+                                    name="lastName"
+                                    type="text"
+                                    [label]="'table.lastname' | translate"
+                                ></ppw-column>
+                                <ppw-column
+                                    name="birthDate"
+                                    type="date"
+                                    [label]="'table.birthdate' | translate"
+                                ></ppw-column>
+                                <ppw-column name="age" type="number" [label]="'table.age' | translate"></ppw-column>
                                 <ppw-column
                                     name="income"
                                     type="number"
-                                    label="Income"
+                                    [label]="'table.income' | translate"
                                     [numberFormatFn]="formatIncome.bind(this)"
                                 ></ppw-column>
                                 <ppw-column
                                     name="bonus"
                                     type="number"
-                                    label="Bonus"
+                                    [label]="'table.bonus' | translate"
                                     [numberFormatFn]="formatBonus.bind(this)"
                                 ></ppw-column>
-                                <ppw-column name="rowIndex" type="template" label="Row index">
+                                <ppw-column name="rowIndex" type="template" [label]="'table.row-index' | translate">
                                     <ng-template ppw-column-cell let-rowIndex="rowIndex">
                                         <span>{{ rowIndex }}</span>
                                     </ng-template>
@@ -220,23 +233,35 @@
                                 (orderChanged)="orderChanged(players.entity, $event)"
                                 (selectionChanged)="updateSelected($event)"
                             >
-                                <ppw-column name="firstName" type="text" label="First name"></ppw-column>
-                                <ppw-column name="lastName" type="text" label="Last name"></ppw-column>
-                                <ppw-column name="birthDate" type="date" label="Birth date"></ppw-column>
-                                <ppw-column name="age" type="number" label="Age"></ppw-column>
+                                <ppw-column
+                                    name="firstName"
+                                    type="text"
+                                    [label]="'table.firstname' | translate"
+                                ></ppw-column>
+                                <ppw-column
+                                    name="lastName"
+                                    type="text"
+                                    [label]="'table.lastname' | translate"
+                                ></ppw-column>
+                                <ppw-column
+                                    name="birthDate"
+                                    type="date"
+                                    [label]="'table.birthdate' | translate"
+                                ></ppw-column>
+                                <ppw-column name="age" type="number" [label]="'table.age' | translate"></ppw-column>
                                 <ppw-column
                                     name="income"
                                     type="number"
-                                    label="Income"
+                                    [label]="'table.income' | translate"
                                     [numberFormatFn]="formatIncome.bind(this)"
                                 ></ppw-column>
                                 <ppw-column
                                     name="bonus"
                                     type="number"
-                                    label="Bonus"
+                                    [label]="'table.bonus' | translate"
                                     [numberFormatFn]="formatBonus.bind(this)"
                                 ></ppw-column>
-                                <ppw-column name="rowIndex" type="template" label="Row index">
+                                <ppw-column name="rowIndex" type="template" [label]="'table.row-index' | translate">
                                     <ng-template ppw-column-cell let-rowIndex="rowIndex">
                                         <span>{{ rowIndex }}</span>
                                     </ng-template>
