Pass the column by getting it by its index from the columns signal. Reusing the signal makes sure that Angular updates the header labels correctly

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -76,7 +76,9 @@
                     @if (headerTemplates[column.name]) {
                         <ng-container *ngTemplateOutlet="headerTemplates[column.name]"></ng-container>
                     } @else {
-                        <ng-container *ngTemplateOutlet="headerTextCellTemplate; context: { column }"></ng-container>
+                        <ng-container
+                            *ngTemplateOutlet="headerTextCellTemplate; context: { column: columns()[$index] }"
+                        ></ng-container>
                     }
                 </th>
                 <td
