Add an option to disable the table animations

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -157,6 +157,7 @@
         <tr mat-header-row *matHeaderRowDef="columnNames(); sticky: !!options()?.header?.sticky"></tr>
         <tr
             mat-row
+            [@.disabled]="disableAnimations()"
             @rowsAnimation
             *matRowDef="let row; columns: columnNames()"
             cdkDrag
