--- a/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
+++ b/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
@@ -7,11 +7,16 @@
 ></mat-dialog-content>
 <mat-dialog-actions align="end">
     @if (!data.allowConfirmOnly) {
-        <button mat-stroked-button [mat-dialog-close]="false">
+        <button mat-stroked-button class="ppw-confirmation-dialog__action" [mat-dialog-close]="false">
             <i class="fa-solid fa-ban"></i> {{ data.cancelKey | translate }}
         </button>
     }
-    <button mat-raised-button [mat-dialog-close]="true" [color]="confirmationThemePalette">
+    <button
+        mat-raised-button
+        class="ppw-confirmation-dialog__action"
+        [mat-dialog-close]="true"
+        [color]="confirmationThemePalette"
+    >
         <i class="fa-solid fa-check"></i> {{ data.confirmationKey | translate }}
     </button>
 </mat-dialog-actions>
