--- a/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.scss
+++ b/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.scss
@@ -6,3 +6,16 @@
 mat-dialog-content {
     white-space: pre-wrap;
 }
+
+@media only screen and (max-width: 960px) {
+    mat-dialog-actions {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 8px;
+
+        button.ppw-confirmation-dialog__action {
+            margin: 0;
+        }
+    }
+}
